created ui and divs for rendering

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,22 @@
     <script src="./client.js"></script>
 </head>
 <body>
-    
+    <h1>Server Side Calculator</h1>
+    <div id="div-inputs">
+        <input id="num-1" type="number" placeholder="0">
+        <input id="btn-add" type="button" value="+">
+        <input id="btn-sub" type="button" value="-"">
+        <input id="btn-mult" type="button" value="*"">
+        <input id="btn-div" type="button" value="/"">
+        <input id="num-2" type="number" placeholder="0">
+        <input id="btn-eq" type="button" value="=">
+        <input id="btn-clr" type="button" value="C">
+    </div>
+    <div id="div-result">
+        <!-- render result of last operation here -->
+    </div>
+    <div id="div-history">
+        <!-- render history here -->
+    </div>
 </body>
 </html>
