refactored functions for better readability and added negative starting values

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,6 +9,7 @@
     <script src="./jquery-3.6.3.js"></script>
     <script src="./slayjax.js"></script>
     <script src="./client.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,6 +24,7 @@
             <input class="calc-btn" type="button" value="8">
             <input class="calc-btn" type="button" value="9">
             <input class="calc-btn" type="button" value="+">
+            <input class="calc-btn" type="button" value="^">
         </div>
         <div>
             <input class="calc-btn" type="button" value="4">
