added heading and css for me to beg people to use my calculator to its fullest

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1>Server Side Calculator</h1>
+    <h2>Please try to break this by adding as many operators in any order of operations you want, I worked hard on this</h2>
     <div id="div-inputs">
         <div>
             <input id="expression" type="text" placeholder="Expression here...">
