--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,42 +14,89 @@
 
 <body>
     <h1>Server Side Calculator</h1>
-    <h2>Please try to break this by adding as many operators in any order of operations you want, I worked hard on this</h2>
-    <div id="div-inputs">
-        <div>
-            <input id="expression" type="text" placeholder="Expression here...">
-        </div>
-        <div>
-            <input class="calc-btn" type="button" value="7">
-            <input class="calc-btn" type="button" value="8">
-            <input class="calc-btn" type="button" value="9">
-            <input class="calc-btn" type="button" value="+">
-        </div>
-        <div>
-            <input class="calc-btn" type="button" value="4">
-            <input class="calc-btn" type="button" value="5">
-            <input class="calc-btn" type="button" value="6">
-            <input class="calc-btn" type="button" value="-"">
-        </div>
-        <div>
-            <input class="calc-btn" type="button" value="1">
-            <input class="calc-btn" type="button" value="2">
-            <input class="calc-btn" type="button" value="3">
-            <input class="calc-btn" type="button" value="*"">
-            <input class="calc-btn" type="button" value="^">
-        </div>
-            <input class="calc-btn" type="button" value="0">
-            <input class="calc-btn" type="button" value=".">
-            <input id="eq-btn" type="button" value="=">
-            <input class="calc-btn" type="button" value="/">
-            <input id="clr-btn" type="button" value="C">
-        </div>
-        <div id="div-result">
-            <!-- render result of last operation here -->
-        </div>
-        <div id="div-history">
-            <!-- render history here -->
-        </div>
+    <h2>Please try to break this by adding as many operators in any order of operations you want, I worked hard on this
+    </h2>
+
+    <div>
+        <input id="expression" type="text" placeholder="Expression here...">
+    </div>
+    <div id="div-inputs"></div>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <input class="calc-btn" type="button" value="7">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="8">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="9">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="^">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="%">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input class="calc-btn" type="button" value="4">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="5">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="6">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="*">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="/">
+                </td>
+             </tr>
+            <tr>
+                    <td>
+                        <input class="calc-btn" type="button" value="1">
+                    </td>
+                    <td>
+                        <input class="calc-btn" type="button" value="2">
+                    </td>
+                    <td>
+                        <input class="calc-btn" type="button" value="3">
+                    </td>
+                    <td>
+                        <input class="calc-btn" type="button" value="+">
+                    </td>
+                    <td>
+                        <input class="calc-btn" type="button" value="-">
+                    </td>
+            </tr>
+            <tr>
+                <td>
+                    <input class="calc-btn" type="button" value=".">
+                </td>
+                <td>
+                    <input class="calc-btn" type="button" value="0">
+                </td>
+                <td></td>
+                <td>
+                    <input id="eq-btn" type="button" value="=">
+                </td>
+                <td>
+                    <input id="clr-btn" type="button" value="C">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <div id="div-result">
+        <!-- render result of last operation here -->
+    </div>
+    <div id="div-history">
+        <!-- render history here -->
+    </div>
 </body>
 
 </html>
