add functionality for clearing history

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -91,6 +91,7 @@
             </tr>
         </tbody>
     </table>
+    <input id="clr-history-btn" type="button" value="Clear History">
     <div id="div-result">
         <!-- render result of last operation here -->
     </div>
